FIX: Wrong color when app theme set to auto while appearance set to light at os level

--- a/beta/src/components/theme-switcher/index.css
+++ b/beta/src/components/theme-switcher/index.css
@@ -40,7 +40,7 @@
 
 .theme-switcher-component label .icon {
   fill: transparent;
-  stroke: var(--white);
+  stroke: var(--black);
 }
 
 @media (prefers-color-scheme: dark) {
